--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 dotenv = "0.15.0"
 gql_client = "1.0.7"
+mongodb = "2.4.0"
 redis = "0.22.3"
 serde ={version = "1.0.156", features = ["derive"]}
 serde_json = "1.0.94"
