--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -6,4 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = { version = "0.5.0-rc.2", features = ["json"] }
+axum = {version ="0.6.11", features = ["headers"]}
+serde = {version ="1.0.157", features = ["derive"] }
+serde_json = "1.0.94"
+tokio = {version="1.26.0", features = ["full"] }
+dotenv = "0.15.0"
+mongodb = "2.4.0"
+tracing = "0.1.37"
+tracing-subscriber = {verison ="0.3.16", features = ["env-filter"]}
