--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -14,3 +14,4 @@ dotenv = "0.15.0"
 mongodb = "2.4.0"
 tracing = "0.1.37"
 tracing-subscriber = {verison ="0.3.16", features = ["env-filter"]}
+chrono = {version = "0.4.24", features = ["serde"]}
