--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -12,6 +12,7 @@ mongodb = "2.4.0"
 serde ={version = "1.0.156", features = ["derive"]}
 serde_json = "1.0.94"
 tokio = { version = "1.26.0", features = ["full"] }
+datamodels = {path="../datamodels/"}
 
 
 # Each handler has to be specified as [[bin]]
